<resources>
    <!-- General -->
    <string name="app_name">EvernoteClient</string>
    <!-- Login -->
    <string name="login_button_login">Iniciar sesión</string>
    <!-- Note list -->
    <string name="label_note_list_sort">Ordenar por:</string>
    <string name="option_sort_title">Título</string>
    <string name="option_sort_date">Fecha</string>
    <string name="message_retrieving_notes">Recuperando notas…</string>
    <string name="title_activity_note_list">Notas</string>
    <string name="title_activity_note_display">Detalle de la nota</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new_note">Nueva nota</string>
    <string name="hint_new_note_title">Título de la nota…</string>
    <string name="label_new_note_title">Título</string>
    <string name="label_new_note_content">Contenido</string>
    <string name="btn_new_note_save">Guardar</string>
    <string name="hint_new_note_content">Contenido de la nota…</string>
    <string name="error_compulsory_field">Este campo es obligatorio</string>
    <string name="error_note_not_saved">Se ha producido un error al guardar la nota, vuelve a intentarlo.</string>
    <string name="message_new_note_created">Nota creada con éxito</string>
    <string name="message_retrieving_content">Recuperando contenido de la nota…</string>
    <string name="error_note_content_recover">Se ha producido un error al recuperar la nota.</string>
    <string name="message_logout_title">Cerrar sesión</string>
    <string name="message_logout_message">¿Seguro que quieres cerrar la sesión?</string>
    <string name="option_logout">Cerrar sesión</string>
    <string name="option_cancel">Cancelar</string>
    <string name="error_invalid_certificate">El certificado no es válido.</string>
    <string name="error_reader_not_configured">No se ha podido configurar el lector de texto en pantalla</string>
    <string name="button_clear_content">Limpiar contenido</string>
</resources>
